EDSC-1116: Prevent action buttons on granule/collection list from covering item details

--- a/app/assets/stylesheets/modules/panel_list.css.scss
+++ b/app/assets/stylesheets/modules/panel_list.css.scss
@@ -1,5 +1,6 @@
 $panel-list-item-height: 75px;
 $panel-list-thumbnail-size: $panel-list-item-height;
+$panel-list-thumbnail-container-size: $panel-list-thumbnail-size + 10px;
 
 .panel-list {
   .button {
@@ -42,7 +43,8 @@ $panel-list-thumbnail-size: $panel-list-item-height;
 }
 
 .panel-list-item > p {
-  margin-left: $panel-list-thumbnail-size;
+  margin-left: $panel-list-thumbnail-container-size;
+  display: table;
 }
 
 // Drag handles instead of borders
@@ -80,8 +82,8 @@ $panel-list-thumbnail-size: $panel-list-item-height;
   float: left;
   position:relative;
   margin-right: .5em;
-  width: $panel-list-thumbnail-size + 10px;
-  height: $panel-list-thumbnail-size + 10px;
+  width: $panel-list-thumbnail-container-size;
+  height: $panel-list-thumbnail-container-size;
   background-color: #222;
   border: 5px solid #111;
   text-align: center;
@@ -222,6 +224,7 @@ $panel-list-thumbnail-size: $panel-list-item-height;
 .panel-list-comparison-details {
   font-size: .9em;
   padding: 4px 8px;
+  margin-right: 80px;
 }
 
 .panel-list-granule-description {
@@ -235,6 +238,14 @@ $panel-list-thumbnail-size: $panel-list-item-height;
   padding: 1em;
   right: 0;
   bottom: 0;
+}
+
+.panel-list-item-actions-buffer {
+  display: block;
+  float: right;
+  width: 84px;
+  height: 10px;
+  z-index: -1;
 }
 
 #granule-list:focus, #granule-list.has-focus {
